--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "underscore": ">= 1.3.3"
   },
   "devDependencies": {
+    "express": >= "2.5.0",
     "mocha": ">= 1.0.1",
     "expect.js": ">= 0.1.2"
   },
