--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "adrai",
   "name": "sessionstore",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "private": false,
   "main": "index.js",
   "engines": {
@@ -11,6 +11,7 @@
     "lib": "./lib"
   },
   "dependencies": {
+    "async": ">= 0.1.18",
     "underscore": ">= 1.3.3"
   },
   "devDependencies": {
@@ -23,6 +24,8 @@
   "keywords"    : [
     "orm",
     "mongodb",
+    "couchdb",
+    "memory",
     "database",
     "host"
   ],
