--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "adrai",
   "name": "sessionstore",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "main": "index.js",
   "engines": {
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "async": ">= 0.1.18",
-    "underscore": ">= 1.3.3"
+    "lodash": ">= 0.4.2"
   },
   "devDependencies": {
     "mongodb": ">= 0.0.1",
