feat(redis): SessionStore for redis support

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "mongodb": ">= 0.0.1",
+    "tingodb": ">= 0.0.1",
+    "redis": "~0.10.1",
     "express": ">= 2.5.0",
     "mocha": ">= 1.0.1",
     "expect.js": ">= 0.1.2"
