bugfixing in travis and readme

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
-before_script: "npm install --dev"
+before_script: "npm install"
+
+services:
+  - redis-server
 
 language: node_js
 node_js:
   - 0.8
-  - 0.1
+  - 0.10
 
 branches:
   only:
