--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "async": "0.9.0",
     "jsondate": "0.0.1",
-    "lodash": "2.4.1",
+    "lodash": "^3.6.0",
     "tolerance": "1.0.0"
   },
   "devDependencies": {
