--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lib": "./lib"
   },
   "dependencies": {
-    "async": "1.0.0",
+    "async": "^1.2.1",
     "jsondate": "0.0.1",
     "lodash": "^3.9.3",
     "tolerance": "1.0.0"
