--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "lib": "./lib"
   },
   "dependencies": {
-    "async": "^1.2.1",
+    "async": "1.2.1",
     "jsondate": "0.0.1",
-    "lodash": "^3.9.3",
+    "lodash": "3.9.3",
     "tolerance": "1.0.0"
   },
   "devDependencies": {
