--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "devDependencies": {
     "cradle": ">=0.2.7",
-    "elasticsearch": "^5.0.0",
-    "eslint": "^1.0.0",
+    "elasticsearch": ">=5.0.0",
+    "eslint": ">=1.0.0",
     "expect.js": ">= 0.1.2",
     "express": ">= 2.5.0",
     "express-session": ">= 1.0.0",
