--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "lib": "./lib"
   },
   "dependencies": {
-    "async": "^1.4.2",
+    "async": "1.4.2",
     "jsondate": "0.0.1",
-    "lodash": "^3.10.1",
+    "lodash": "3.10.1",
     "parent-require": "1.0.0",
     "tolerance": "1.0.0"
   },
