--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "async": "1.5.2",
     "jsondate": "0.0.1",
-    "lodash": "3.10.1",
+    "lodash": "4.5.0",
     "parent-require": "1.0.0",
     "tolerance": "1.0.0"
   },
   "devDependencies": {
     "cradle": ">=0.2.7",
-    "elasticsearch": "8.x.x",
+    "elasticsearch": ">= 10.0.0",
     "eslint": ">=1.0.0",
     "expect.js": ">= 0.1.2",
     "express": ">= 2.5.0",
