--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lib": "./lib"
   },
   "dependencies": {
-    "async": "2.3.0",
+    "async": "2.6.0",
     "jsondate": "0.0.1",
     "lodash": "4.17.4",
     "parent-require": "1.0.0",
@@ -26,7 +26,7 @@
     "express-session": ">= 1.0.0",
     "memjs": ">= 0.8.4",
     "mocha": "3.x.x",
-    "mongodb": ">= 1.x",
+    "mongodb": "2.1.x",
     "redis": ">= 0.10.1",
     "tingodb": ">= 0.0.1"
   },
