--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "adrai",
   "name": "sessionstore",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "private": false,
   "main": "index.js",
   "engines": {
@@ -13,7 +13,7 @@
   "dependencies": {
     "async": "2.6.0",
     "jsondate": "0.0.1",
-    "lodash": "4.17.4",
+    "lodash": "^4.17.10",
     "parent-require": "1.0.0",
     "tolerance": "1.0.0"
   },
@@ -25,7 +25,7 @@
     "express": ">= 2.5.0",
     "express-session": ">= 1.0.0",
     "memjs": "0.x.x",
-    "mocha": "3.x.x",
+    "mocha": "^5.1.1",
     "mongodb": "2.1.x",
     "redis": ">= 0.10.1",
     "tingodb": ">= 0.0.1"
