--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tolerance": "1.0.0"
   },
   "devDependencies": {
+    "@elastic/elasticsearch": "^7.5.1",
     "cradle": ">=0.2.7",
     "elasticsearch": ">= 10.0.0",
     "eslint": ">=1.0.0",
